# copilot

./: .gitignore  Cargo.toml  README.md  build.rs  data.json  justfile
.github/workflows/: ci.yml  release.yml
src/: app.rs  lib.rs  log.rs  logger.rs  mail.rs  main.rs  normal.rs  openai.rs
src/helper/: jina.rs  logger.rs  mail.rs  mod.rs  openai.rs
src/task/: github.rs  log.rs  mod.rs  normal.rs
src/templates/: error.rs  mod.rs  normal.rs
templates/: base.html  error.html  github.html  log.html  normal.html
