[package]
name = "copilot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-openai = "0.26.0"
async-trait = "0.1.84"
dotenvy = "0.15.7"
lettre = { version = "0.11.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "charset", "http2"] }
serde = { version = "1.0.217", features = ["derive"] }
tera = "1.20.0"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = { version = "0.13.0", features = ["signal"] }
