[package]
name = "copilot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
askama = "0.12.1"
async-openai = "0.26.0"
bon = "3.3.2"
chrono-tz = "0.10.0"
dotenvy = "0.15.7"
futures = "0.3.31"
lettre = { version = "0.11.11", default-features = false, features = [
    "builder",
    "smtp-transport",
    "tokio1-rustls-tls",
] }
log = "0.4.22"
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
    "charset",
    "http2",
    "json",
] }
serde = { version = "1.0.217", features = ["derive"] }
time = { version = "0.3.37", features = ["macros"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = { version = "0.13.0", features = ["signal"] }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "local-time",
] }
